[tool.poetry]
name = "birthdaygram"
version = "1.0.0"
description = "Telegram bot for birthday reminders"
authors = ["Ilya Malashenko <melax08@yandex.ru>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "0.21.1"
python-telegram-bot = "20.0"
sqlalchemy = "2.0.15"
psycopg2-binary = "2.9.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
pre-commit = "^3.3.3"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
